--- a/GE.WebAdmin/Views/Home/Index.cshtml
+++ b/GE.WebAdmin/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Главная";
 }
 
 <h3>Добро пожаловать на борт <span class="text-primary">@SX.WebCore.Resources.Settings.adminPanelName</span>, @User.Identity.Name !</h3>
