--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -51,6 +51,9 @@
                         <li>
                             <a href="@Url.Action("List", "Employees")">Контакты</a>
                         </li>
+                        <li>
+                            <a href="#">Правообладателям</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
