--- a/GE.WebUI/less/humor.less
+++ b/GE.WebUI/less/humor.less
@@ -26,6 +26,19 @@
     margin-bottom: @def-pad;
 }
 
+.humor-list__source{
+    font-size:12px;
+}
+
+.humor-list__source a{
+    color:@color-white;
+    text-decoration:underline;
+}
+
+.humor-list__source a:hover{
+    text-decoration:none;
+}
+
 //humor-page
 .humor-page {
     color: @color-white;
