--- a/GE.WebAdmin/Views/Banners/Edit.cshtml
+++ b/GE.WebAdmin/Views/Banners/Edit.cshtml
@@ -52,6 +52,12 @@
         </div>
     </div>
 
+    <div class="form-group">
+        @Html.LabelFor(x => x.Description)
+        @Html.EditorFor(x => x.Description, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите описание", @style="min-height:300px;" } })
+        @Html.ValidationMessageFor(x => x.Description)
+    </div>
+
     <h4>Парметры сквозных баннеров</h4>
     <p class="text-info" style="max-width:400px;">Баннер будет отображаться как сквозной только при условии задания этих парметров. Но даже если параметры заданы, баннер все равно может использоваться как обычный</p>
 
