--- a/GE.WebUI/Views/Error/ServerError.cshtml
+++ b/GE.WebUI/Views/Error/ServerError.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Ошибка сервера";
 }
 
-<div class="error-page">
+<div class="error-page server">
     <div class="row">
         <div class="col-md-6">
             <div class="err-txt">
@@ -25,7 +25,8 @@
     </div>
     <div class="row">
         <div class="col-md-6">
-            Ошибка сервера
+            Непредвиденная ошибка сервера<br />
+            Мы уже работаем над устранением причин
         </div>
         <div class="col-md-6">
             &nbsp;
