--- a/GE.WebUI/less/error-page.less
+++ b/GE.WebUI/less/error-page.less
@@ -14,6 +14,10 @@ html, body {
     position: relative;
 }
 
+.error-page.server{
+    color:@color-white;
+}
+
 body {
     padding: 0;
     margin: 0;
