--- a/GE.WebUI/Views/News/_LastCategoryBlock.cshtml
+++ b/GE.WebUI/Views/News/_LastCategoryBlock.cshtml
@@ -66,7 +66,7 @@
                                     </li>
                                 }
                             </ul>
-                            <div class="lgnb-tags">
+                            <div class="lgnb-dropdown">
 
                             </div>
                         </div>
