--- a/GE.WebUI/less/last-category-news-block.less
+++ b/GE.WebUI/less/last-category-news-block.less
@@ -225,3 +225,8 @@
 .l-c-n-b .lcnb-news > li > a:hover {
     font-weight: 700;
 }
+
+.l-c-n-b .lgnb-dropdown{
+    background-color:@color-white;
+    width:100%;
+}
