--- a/GE.WebAdmin/Views/Shared/EditorTemplates/PicturesLookupGrid.cshtml
+++ b/GE.WebAdmin/Views/Shared/EditorTemplates/PicturesLookupGrid.cshtml
@@ -9,11 +9,11 @@
     <input type="hidden" value="@Html.ValueForModel()" name="@(prefix==null?Html.IdForModel().ToString(): prefix+"."+Html.IdForModel().ToString())" />
 
     @Html.SxGridLookup(new SxExtantions.SxGridLookupSettings
-    {
-        DataAjaxUrl = "/pictures/findgridview",
-        DefaulText = pictureCaption == null ? Html.ValueForModel().ToString() : pictureCaption.ToString(),
-        Placeholder="Выберите изображение"
-    },
+{
+    DataAjaxUrl = Url.Action("FindGridview", "Pictures"),
+    DefaulText = pictureCaption == null ? Html.ValueForModel().ToString() : pictureCaption.ToString(),
+    Placeholder="Выберите изображение"
+},
     new SxVMPicture[0]
 )
 </div>
