--- a/GE.WebUI/Views/AuthorAphorisms/Details.cshtml
+++ b/GE.WebUI/Views/AuthorAphorisms/Details.cshtml
@@ -15,7 +15,7 @@
     <link href="~/content/dist/css/ap-author-page.min.css" rel="stylesheet" />
 }
 
-@Html.Partial("_Breadcrumbs", (VMBreadcrumb[])ViewBag.Breadcrumbs)
+@Html.Partial("_Breadcrumbs", (SxVMBreadcrumb[])ViewBag.Breadcrumbs)
 
 <div class="ap-author-page">
     <div class="row">
