--- a/GE.WebUI/Views/Humor/List.cshtml
+++ b/GE.WebUI/Views/Humor/List.cshtml
@@ -14,7 +14,7 @@
     <link href="~/content/dist/css/humor.min.css" rel="stylesheet" />
 }
 
-@Html.Partial("_Breadcrumbs", model: (VMBreadcrumb[])ViewBag.Breadcrumbs)
+@Html.Partial("_Breadcrumbs", model: (SxVMBreadcrumb[])ViewBag.Breadcrumbs)
 
 <div id="humor-page">
     @if (Model.Collection.Any())
