--- a/GE.WebUI/Views/News/Details.cshtml
+++ b/GE.WebUI/Views/News/Details.cshtml
@@ -19,7 +19,7 @@
 
 @Html.AntiForgeryToken()
 <div class="detail-news">
-    @Html.Partial("_Breadcrumbs", (VMBreadcrumb[])ViewBag.Breadcrumbs)
+    @Html.Partial("_Breadcrumbs", (SxVMBreadcrumb[])ViewBag.Breadcrumbs)
 
     @Html.Partial("_Foreword", Model)
 
